apps/filebrowser/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: config-map
          configMap:
            name: config
        - name: volume
          persistentVolumeClaim:
            claimName: app-volume
      containers:
        - name: app
          image: ghcr.io/gtsteffaniak/filebrowser:1.3.10-beta@sha256:03b9823bede29b7bf96d8e2c8d6c7c573aa2109013a92fe362cb06484ff16560
          envFrom: []
          volumeMounts:
            - name: nas-media
              mountPath: /media
            - name: config-map
              mountPath: /home/filebrowser/data/config.yaml
              subPath: config.yaml
            - name: volume
              mountPath: /config
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-route
  annotations:
    internal-dns.alpha.kubernetes.io/target: internal.beaver-cloud.xyz
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-beaver-cloud
      namespace: envoy-gateway-system
  hostnames:
    - filebrowser.beaver-cloud.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: app-service
          port: 80
          weight: 1
