apps/filebrowser/filebrowser.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: filebrowser
          image: ghcr.io/gtsteffaniak/filebrowser:1.2.7-beta@sha256:02bccfb1d70ef1c5bab78e0beae90c2ef5e0d4d19b033c8e37d5335e230912c2
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: config-map
              mountPath: /home/filebrowser/config.yaml
              subPath: config.yaml
      volumes:
        - name: config-map
          configMap:
            name: config

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host filebrowser.beaver-cloud.xyz]
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
